Add icon and collapsing